# kyros-gui

./: .gitignore  README.md  index.html  package.json  run.sh  some1and2.kyros.desktop
src/: App.css  App.tsx  ImageDisplay.jsx  ImageDisplay.tsx  Layout.css  Layout.jsx  Layout.tsx  OptionBox.css  OptionBox.jsx  OptionBox.tsx  Sidebar.tsx  ]  inputs.css  main.jsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  schema.rs
src/components/: popup.css  popup.jsx
src/views/: Donate.tsx  Gallery.tsx  Home.jsx  Home.tsx  Source.jsx  home.jsx
